...
          Positioned(
            left: 0,
            top: 0,
            bottom: 0,
            width: EdgeSwipeBack.kEdgeSwipeWidth,
            child: GestureDetector(
              key: const Key('edge-swipe-back'),
              behavior: HitTestBehavior.translucent,
              onHorizontalDragStart: _onEdgeSwipeStart,
              onHorizontalDragUpdate: _onEdgeSwipeUpdate,
              onHorizontalDragEnd: _onEdgeSwipeEnd,
            ),
          ),
...
